kubernetes/core/flux-system/flux-operator/app/networkpolicies/allow-scraping.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-scraping
spec:
  endpointSelector: {}
  ingress:
    - fromEntities:
        - cluster
      toPorts:
        - ports:
            - port: "8080"
              protocol: TCP
