kubernetes/core/flux-system/flux-operator/app/networkpolicies/allow-webhooks.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-webhooks
spec:
  endpointSelector:
    matchLabels:
      app: notification-controller
  ingress:
    - fromEntities:
        - cluster
